# 4-wheeled-bot-with-arm-test1

./: README.md
install/: local_setup.sh  setup.sh
install/my_py_pkg/lib/my_py_pkg/: joint_state_pub
install/my_py_pkg/share/my_py_pkg/: package.sh
install/my_robot_bringup/share/my_robot_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/my_robot_bringup/share/my_robot_bringup/cmake/: my_robot_bringupConfig-version.cmake  my_robot_bringupConfig.cmake
install/my_robot_bringup/share/my_robot_bringup/environment/: ament_prefix_path.dsv  path.dsv
install/my_robot_bringup/share/my_robot_bringup/launch/: my_robot_gazebo.launch.xml
install/my_robot_bringup/share/my_robot_bringup/rviz/: urdf_config.rviz
install/my_robot_bringup/share/my_robot_bringup/worlds/: my_world.world  new_test.world  test_camera.world
install/my_robot_description/share/my_robot_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
log/: latest_build
src/my_py_pkg/: package.xml  setup.py
src/my_robot_bringup/: package.xml
src/my_robot_bringup/launch/: my_robot_gazebo.launch.xml
src/my_robot_bringup/rviz/: urdf_config.rviz
src/my_robot_bringup/worlds/: my_world.world  new_test.world  test_camera.world
src/my_robot_description/: CMakeLists.txt  package.xml
src/my_robot_description/launch/: display.launch.xml
src/my_robot_description/urdf/: bot_base.xacro  bot_base_gazebo.xacro  camera.xacro  common_properties.xacro  my_robot.urdf.xacro
(+17 files in other folders)
